k8s/istio-ingress/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapi
  namespace: service-mesh
spec:
  hosts:
    - "*"
  gateways:
    - webapi-gateway
  http:
    - route:
        - destination:
            host: webapi
            subset: v1
          weight: 50
        - destination:
            host: webapi
            subset: v2
          weight: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapi-version1-domain
  namespace: service-mesh
spec:
  hosts:
    - "blue.tfsantos.com"
  gateways:
    - webapi-gateway
  http:
    - route:
        - destination:
            host: webapi
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapi-version2-domain
  namespace: service-mesh
spec:
  hosts:
    - "green.tfsantos.com"
  gateways:
    - webapi-gateway
  http:
    - route:
        - destination:
            host: webapi
            subset: v2
